--- a/reference/krs_rdf/paths/get-financial-data.yaml
+++ b/reference/krs_rdf/paths/get-financial-data.yaml
@@ -4,7 +4,18 @@ tags:
   - financial_data
 security:
   - api_key: []
-description: Pobiera przetworzone dane finansowe ze sprawozdań złożonych do Repozytorium Dokumentów Finansowych KRS spełniających podane kryteria.
+description: |-
+  Pobiera przetworzone dane finansowe ze sprawozdań złożonych do Repozytorium
+  Dokumentów Finansowych KRS spełniających podane kryteria.
+
+  W przypadku sukcesu w treści odpowiedzi zwracana jest lista danych finansowych
+  ze sprawozdań spełniających kryteria określone w parametrach metody,
+  posortowanych malejąco według daty publikacji w RDF.
+
+  W przypadku, gdy żadne sprawozdanie nie spełnia podanych kryteriów, zwracana
+  jest pusta lista. W przypadku, gdy liczba sprawozdań spełniających kryteria
+  jest większa niż 100, lista zawiera dane finansowe ze 100 pierwszych
+  dokumentów.
 parameters:
   - schema:
       type: string
@@ -74,12 +85,7 @@ responses:
           type: array
           maxItems: 100
           uniqueItems: true
-          description: |-
-            Lista danych finansowych ze sprawozdań spełniających kryteria określone
-            w parametrach metody, posortowanych malejąco według daty publikacji w RDF.
-            W przypadku, gdy żadne sprawozdanie nie spełnia podanych kryteriów, zwracana
-            jest pusta lista. W przypadku, gdy liczba sprawozdań spełniających kryteria
-            jest większa niż 100, lista zawiera dane finansowe ze 100 pierwszych dokumentów.
+          description: 'Lista danych finansowych ze sprawozdań spełniających kryteria określone w parametrach metody, posortowanych malejąco według daty publikacji w RDF'
           items:
             type: object
             properties:
