--- a/reference/msig/paths/check-numbers.yaml
+++ b/reference/msig/paths/check-numbers.yaml
@@ -10,7 +10,7 @@ description: |-
 
   W przypadku sukcesu w treści odpowiedzi zawsze zwracane są cztery listy
   zawierające numery rejestrowe przekazane w parametrach żądania, dla których we
-  wskazanym okresie pojawiły się ogłoszenia w MSiG.
+  wskazanym okresie pojawiły się ogłoszenia w MSiG / KRZ.
 requestBody:
   content:
     application/json:
@@ -21,12 +21,12 @@ requestBody:
             type: string
             format: date
             example: '2019-01-01'
-            description: Początek zakresu dla daty publikacji ogłoszenia w MSiG
+            description: Początek zakresu dla daty publikacji ogłoszenia w MSiG / KRZ
           date_to:
             type: string
             format: date
             example: '2019-12-31'
-            description: Koniec zakresu dla daty publikacji ogłoszenia w MSiG
+            description: Koniec zakresu dla daty publikacji ogłoszenia w MSiG / KRZ
           nip:
             type: array
             maxItems: 1000
@@ -60,30 +60,30 @@ responses:
           oneOf:
             - type: object
               title: Sukces
-              description: 'Cztery listy zawierające numery rejestrowe przekazane w parametrach żądania, dla których we wskazanym okresie pojawiły się ogłoszenia w MSiG'
+              description: 'Cztery listy zawierające numery rejestrowe przekazane w parametrach żądania, dla których we wskazanym okresie pojawiły się ogłoszenia w MSiG / KRZ'
               properties:
                 nip:
                   type: array
                   maxItems: 1000
-                  description: 'Lista numerów NIP, dla których we wskazanym okresie pojawiły się ogłoszenia w MSiG.'
+                  description: 'Lista numerów NIP, dla których we wskazanym okresie pojawiły się ogłoszenia w MSiG / KRZ.'
                   items:
                     $ref: '#/components/schemas/nip'
                 regon:
                   type: array
                   maxItems: 1000
-                  description: 'Lista numerów REGON, dla których we wskazanym okresie pojawiły się ogłoszenia w MSiG.'
+                  description: 'Lista numerów REGON, dla których we wskazanym okresie pojawiły się ogłoszenia w MSiG / KRZ.'
                   items:
                     $ref: '#/components/schemas/regon'
                 krs:
                   type: array
                   maxItems: 1000
-                  description: 'Lista numerów KRS, dla których we wskazanym okresie pojawiły się ogłoszenia w MSiG.'
+                  description: 'Lista numerów KRS, dla których we wskazanym okresie pojawiły się ogłoszenia w MSiG / KRZ.'
                   items:
                     $ref: '#/components/schemas/krs'
                 pesel:
                   type: array
                   maxItems: 1000
-                  description: 'Lista numerów PESEL, dla których we wskazanym okresie pojawiły się ogłoszenia w MSiG.'
+                  description: 'Lista numerów PESEL, dla których we wskazanym okresie pojawiły się ogłoszenia w MSiG / KRZ.'
                   items:
                     $ref: '#/components/schemas/krs'
               required:
