--- a/.editorconfig
+++ b/.editorconfig
@@ -9,3 +9,7 @@ end_of_line = lf
 insert_final_newline = false
 trim_trailing_whitespace = true
 max_line_length = 80
+
+[*.py]
+max_line_length = 100
+indent_size = 4
